--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
     "name": "brick-game",
     "private": true,
-    "scripts": {
-        "build": "webpack",
-        "dev": "webpack serve"
-    },
     "dependencies": {
         "fastiles": "^2.1.0",
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "copy-webpack-plugin": "^11.0.0",
-        "file-loader": "^6.2.0",
-        "html-webpack-plugin": "^5.5.0",
-        "typescript": "^4.8.4",
-        "webpack": "^5.75.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.11.1"
+        "@types/lodash": "^4.14.188",
+        "@types/node": "^16.18.3",
+        "@types/react": "^18.0.25",
+        "@types/react-dom": "^18.0.8",
+        "react-scripts": "5.0.1",
+        "typescript": "^4.8.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
