--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
         "noEmit": true,
         "jsx": "react-jsx"
     },
-    "include": ["src"]
+    "include": ["node_modules/react-scripts", "src"]
 }
