--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.4.4",
         "typescript-collections": "^1.3.3"
     },
     "devDependencies": {
